syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Category {
    string id = 1;
    string name = 2;
    string description = 3;

}

message blank {}

message Query {
    string search = 1;
}
message CategoryRequest {
    string name = 1;
    string description = 2;
}

message CreateCategory {
    string name = 1;
    string description = 2;
}

message CategoryResponse {
    Category category = 1;
}

message CategoryListCategories {
    repeated Category categories = 1;
}

service CategoryService {
    rpc CreateCategory (CategoryRequest) returns (CategoryResponse) {};
    rpc ListCategories (blank) returns (CategoryListCategories) {};
    rpc SearchCategory (Query) returns (CategoryListCategories) {};
    rpc CreateCategoryStream(stream CategoryRequest) returns (CategoryListCategories) {}
    rpc CreateCategoryStreamBiderectinal(stream CategoryRequest) returns (stream CategoryListCategories) {}
}